--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 </head>
 <body>
-  <div class="qr-card">
+  <main class="qr-card">
     <img src="./images/image-qr-code.png" alt="QR Code" class="qr-img">
 
-    <div class"text-div">
-      <p class="bold-text"><strong>Improve your front-end skills by building projects</p>
+    <div class="text-div">
+      <h1>Improve your front-end skills by building projects</h1>
       <p class="regular-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/enriquesb">Enrique SB</a>.
-  </div>
+  </footer>
 </body>
 </html>
